--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -27,8 +27,8 @@ message("######### CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 set(PROJECTNAME CMTK)
 ExternalProject_Add(${PROJECTNAME}
   SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/tags/Slicer3"
-  SVN_USERNAME slicerbot
-  SVN_PASSWORD slicer
+#  SVN_USERNAME slicerbot
+#  SVN_PASSWORD slicer
   CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
     -DCMAKE_INSTALL_PREFIX:PATH=${CMTK_INSTALL_DIR}
