--- a/Applications/CLI/BRAINSTools/BRAINSCommonLib/TestSuite/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSCommonLib/TestSuite/CMakeLists.txt
@@ -1,7 +1,4 @@
 
-if (WIN32)
-  set(BUILD_SUBDIR ${CMAKE_BUILD_TYPE}/)
-endif (WIN32)
 
 #configure_file(${BRAINSCommonLibProject_SOURCE_DIR}/CTestCustom.ctest ${BRAINSCommonLibProject_BINARY_DIR}/CTestCustom.ctest COPYONLY)
 
@@ -10,7 +7,5 @@ set_target_properties(PrettyPrintTableTest
   PROPERTIES RUNTIME_OUTPUT_DIRECTORY
   ${BRAINSCommonLibProject_BINARY_DIR})
 
-set(PrettyPrintTableTest_EXEC ${LAUNCH_EXE} ${BRAINSCommonLibProject_BINARY_DIR}/${BUILD_SUBDIR}PrettyPrintTableTest)
-
-add_test(PrettyPrintTableTest ${PrettyPrintTableTest_EXEC} )
+add_test(NAME PrettyPrintTableTest COMMAND ${LAUNCH_EXE} $<TARGET_FILE:PrettyPrintTableTest>)
 
