BUG:the flag -c does not work on windows for the tests. We are now using the longflag instead
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15678 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Testing/CMakeLists.txt
+++ b/Applications/CLI/Testing/CMakeLists.txt
@@ -928,7 +928,7 @@ add_test(ResampleVolume2RotationNNTest ${Launcher_Command} ${TestLocation}Resamp
   ModuleEntryPoint
     -f ${TransformFile}
     --interpolation nn
-    -c
+    --centered_transform
     ${TEST_DATA}/MRHeadResampled.nhdr
     ${TEMP}/ResampleVolume2Test2.nrrd
     -n 8
@@ -942,7 +942,7 @@ add_test(ResampleVolume2RotationAndAffineTest ${Launcher_Command} ${TestLocation
   ModuleEntryPoint
     -f ${RotationAndAffineFile}
     --interpolation linear
-    -c
+    --centered_transform
     ${TEST_DATA}/MRHeadResampled.nhdr
     ${TEMP}/ResampleVolume2Test3.nrrd
     --transform_order input-to-output
