BUG:the flag -c does not work on windows for the tests. We are now using the longflag instead
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15679 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DiffusionApplications/ResampleDTI/Testing/CMakeLists.txt
+++ b/Applications/CLI/DiffusionApplications/ResampleDTI/Testing/CMakeLists.txt
@@ -41,7 +41,7 @@ add_test(${CLP}RotationNNTest ${Launcher_Command} ${TestLocation}${ResampleTest}
   ModuleEntryPoint
     -f ${TransformFile}
     --interpolation nn
-    -c
+    --centered_transform
     ${OriginalImage}
     ${TransformedImage1}
     -n 8
@@ -59,7 +59,7 @@ add_test(${CLP}2RigidTransformsLinearTest ${Launcher_Command} ${TestLocation}${R
     -f ${RotationAndAffineFile}
     -T FS
     --interpolation linear
-    -c
+    --centered_transform
     ${OriginalImage}
     ${TransformedImage2}
     --correction abs
