ENH: New AtlasCreator module - included in Slicer3 by default.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15714 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -42,7 +42,7 @@ endif(GenerateLM_FOUND)
 #   - ScriptedModule (at run-time for its Tcl package)
 
 SET(modules
-  #AtlasCreator <- culled from slicer 3.6
+  AtlasCreator
   CommandLineModule
   Editor
   Endoscopy
