ENH:removing unsed classes in Libs/IGT
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15754 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/IGT/CMakeLists.txt
+++ b/Libs/IGT/CMakeLists.txt
@@ -63,10 +63,9 @@ install(FILES
 
 set(IGT_SRCS
 #The following two lines are excluded by NH on Jan 10 in an
-anticipation that these have not been used in Modules.
-
-#  vtkIGTDataManager.cxx
-#  vtkIGTDataStream.cxx
+#anticipation that these have not been used in Modules.
+  vtkIGTDataManager.cxx
+  vtkIGTDataStream.cxx
   vtkIGTMatrixState.cxx
   vtkIGTPat2ImgRegistration.cxx
   )
