ENH: adding a Slicer3_USE_JAVA CMake variable, off by default. If on, compile the java example CLI subdriectory. Use the top level find_package call. Todo: fail gracefully if the flag is on but java is not found. TODO: pass it to extend.tcl
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15757 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -726,10 +726,13 @@ SET(cli_modules
   DiffusionApplications
   #EndoNavTracking
   ExtractSkeleton
-  #Java
   N4ITKBiasFieldCorrection
   RobustStatisticsSegmenter
   )
+
+if (Slicer3_USE_JAVA)
+  SET(cli_modules ${cli_modules} Java)
+endif (Slicer3_USE_JAVA)
 
 if ( ${ITK_VERSION_MAJOR} GREATER 3 )
 
