BUG: Remove BetaProbe and UDPServer from svn, cause not ready to Windows compilation yet
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15765 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -83,8 +83,9 @@ SET(modules
   PETCTFusion
   IGTToolSelector
   IGTRecorder
-  UDPServer
-  CaptureBetaProbe
+#  UDPServer
+#  CaptureBetaProbe
+  OsteoPlan
   )
 
 if(Slicer3_USE_OPENIGTLINK)
