BUG: the test dataset is acquired on a Siemens scanner, where B-matrix in dicom headers stores the correct gradient information. By turning on the flag --useBMatrixGradientDirections, the test passes for this dataset. Will need a few other datasets from other vendors for testing -- in process.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15789 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
+++ b/Applications/CLI/DicomToNrrdConverter/Testing/CMakeLists.txt
@@ -31,6 +31,7 @@ set(TEMP "${Slicer3_BINARY_DIR}/Testing/Temporary")
 # DicomToNrrdConverter tests
 add_test(DicomToNrrdConverterTest ${Slicer3_EXE} --launch DicomToNrrdConverterTest
     ModuleEntryPoint
+    --useBMatrixGradientDirections
     --inputDicomDirectory ${TEST_DATA}/DWIDicom
     --outputDirectory ${TEMP}
     --outputVolume DWIDicom.nhdr
