ENH: Changes to allow for fetching testing data from midas.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15799 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSFit/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSFit/CMakeLists.txt
@@ -15,6 +15,8 @@ SETIFEMPTY(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 SETIFEMPTY(CMAKE_BUNDLE_OUTPUT_DIRECTORY  ${CMAKE_CURRENT_BINARY_DIR}/bin)
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
 
+SETIFEMPTY(MIDAS_REST_URL "http://midas.kitware.com/api/rest" CACHE STRING "The MIDAS server where testing data resides")
+
 ###
 CHECKIFSLICER3BUILD()  ## Call the convenience macro
 
@@ -40,12 +42,16 @@ configure_file(
   ${CMAKE_CURRENT_BINARY_DIR}/BRAINSFitCommonLib.h
   )
 
+## ITKv4 requires that ITKReview is explicitly linked against
+if(ITK_VERSION_MAJOR EQUAL 4 )
+  set(ITKREVIEWLIB ITKReview)
+endif(ITK_VERSION_MAJOR EQUAL 4 )
 
 ###
 set(CLP BRAINSFit)
 set(${CLP}_SOURCE BRAINSFit.cxx  ${BRAINSFit_SOURCE_DIR}/BRAINSFitPrimary.cxx)
 CONFIGUREBRAINSORSLICERPROPERTIES(${CLP} BRAINSFitPrimary.xml "${${CLP}_SOURCE}" "")
-target_link_libraries( ${CLP} BRAINSCommonLib ITKIO ITKAlgorithms ${OPTIONAL_DEBUG_LINK_LIBRARIES})
+target_link_libraries( ${CLP} BRAINSCommonLib ${ITKREVIEWLIB} ITKIO ITKAlgorithms ${OPTIONAL_DEBUG_LINK_LIBRARIES})
 
 INSTALL(TARGETS BRAINSFit DESTINATION bin)
 
