ENH: Added new preprocessing pipeline for CT-Hand-Bone task
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15803 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -31,6 +31,7 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm
   ${CMAKE_CURRENT_SOURCE_DIR}/Registration
   ${CMAKE_CURRENT_SOURCE_DIR}/Graph
+  ${CMAKE_CURRENT_SOURCE_DIR}/Tasks
   ${Slicer3_Libs_INCLUDE_DIRS}
   ${Slicer3_Base_INCLUDE_DIRS}
   ${vtkSlicerVolumesModuleLogic_SOURCE_DIR}
@@ -47,6 +48,7 @@ file(GLOB headers
   "${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/*.txx"
   "${CMAKE_CURRENT_SOURCE_DIR}/Registration/*.h"
   "${CMAKE_CURRENT_SOURCE_DIR}/Graph/*.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Tasks/*.h"
   )
 
 file(GLOB TCLFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Tcl/*.tcl" )
@@ -159,6 +161,7 @@ set(EMSegment_SRCS
   #  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageEMAtlasSegmenter.cxx
   #  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageEMAtlasSuperClass.cxx
   #  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageEMMarkov.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/Tasks/vtkCTHandBoneClass.cxx
   )
 
  set(EMSegment_SRCS ${EMSegment_SRCS}
